--- a/CssTask/grid.html
+++ b/CssTask/grid.html
@@ -1,2 +1,28 @@
-[InternetShortcut]
-URL=https://github.com/kentobias132/cssTask/blob/master/grid.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="grid.css">
+    <title>Grid Task</title>
+</head>
+<body>
+    
+    <nav>
+        <a href="/index.html"> Go to <span>FLEX-BOX</span> Task</a>
+    </nav>
+
+    <main>
+        <div class="grid-container">
+            <div class="box1"></div>
+            <div class="box2"></div>
+            <div class="box3"></div>
+            <div class="box4"></div>
+            <div class="box5"></div>
+        </div>
+    </main>
+
+
+</body>
+</html>
