--- a/CssTask/index.html
+++ b/CssTask/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav>
-        <a href="/grid.html"> Go to <span>GRID-BOX</span> Task</a>
+        <a href="./grid.html"> Go to <span>GRID-BOX</span> Task</a>
     </nav>
     
     <div class="card-container">
