--- a/CssTask/index.html
+++ b/CssTask/index.html
@@ -11,9 +11,19 @@
 </head>
 <body>
 
-    <nav>
-        <a href="./grid.html"> Go to <span>GRID-BOX</span> Task</a>
-    </nav>
+    <header class="page-header">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li>
+                        <a class="nav-link" href="./index.html">Flex</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" href="./grid.html">Grid</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    
     
     <div class="card-container">
         <div class="wrapper">
