--- a/CssTask/grid.html
+++ b/CssTask/grid.html
@@ -9,9 +9,16 @@
 </head>
 <body>
     
-    <nav>
-        <a href="/index.html"> Go to <span>FLEX-BOX</span> Task</a>
-    </nav>
+        <header class="page-header">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li>
+                        <a class="nav-link active" href="./index.html">Flex</a>
+                    </li>
+                    <li><a class="nav-link" href="./grid.html">Grid</a></li>
+                </ul>
+            </nav>
+        </header>
 
     <main>
         <div class="grid-container">
