--- a/CssTask/grid.html
+++ b/CssTask/grid.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="grid.css">
     <title>Grid Task</title>
 </head>
@@ -30,6 +32,16 @@
         </div>
     </main>
 
+    <footer>
+            <p>
+                Coded by
+                <a
+                    href="https://github.com/ayobami11/zuri/blob/main/layout-task/index.html"
+                    target="_blank"
+                    >Ayobami Tunwase</a
+                >
+            </p>
+        </footer>
 
 </body>
 </html>
