--- a/CssTask/index.html
+++ b/CssTask/index.html
@@ -82,7 +82,7 @@
             <p>
                 Coded by
                 <a
-                    href="https://github.com/ayobami11/zuri/blob/main/layout-task/index.html"
+                    href="https://github.com/kentobias132/Zuri-training/tree/main/CssTask"
                     target="_blank"
                     >Ayobami Tunwase</a
                 >
