--- a/CssTask/index.html
+++ b/CssTask/index.html
@@ -82,9 +82,9 @@
             <p>
                 Coded by
                 <a
-                    href="https://github.com/kentobias132/Zuri-training/tree/main/CssTask"
+                    href="https://github.com/kentobias132/Zuri-training/tree/main/CssTask/index.html"
                     target="_blank"
-                    >Ayobami Tunwase</a
+                    >Ken Tobias</a
                 >
             </p>
         </footer>
