--- a/CssTask/grid.html
+++ b/CssTask/grid.html
@@ -36,9 +36,9 @@
             <p>
                 Coded by
                 <a
-                    href="https://github.com/ayobami11/zuri/blob/main/layout-task/index.html"
+                    href="https://github.com/kentobias132/Zuri-training/tree/main/CssTask.html"
                     target="_blank"
-                    >Ayobami Tunwase</a
+                    >Ken Tobias</a
                 >
             </p>
         </footer>
