--- a/Porfolio/index.html
+++ b/Porfolio/index.html
@@ -13,16 +13,17 @@
     <nav>
         <div class="container">
             <div class="row s-btw">
-                <div class="logo"><h1>Ken<span>Tobias<span><h1>
+                <div class="logo"><a href="/index.html
+                    "></a><h1>Ken<span>Tobias<span></span><h1>
                 </div>
                 <div class="menu-btn">
                   <h2>M</h2>
                 </div>
                 <div class="menu-list">
                   <ul>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="/index.html">About Me</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/signup.html">Register</a></li>
                     <li><a href="/login.html">Log In</a></li>
                 </ul>
                 </div>
@@ -36,7 +37,7 @@
                 <div class="text-area">
                     <div class="wrap">
                         <h4 class="font">Hello,&nbsp;  My name is</h4>
-                        <h1>Kehinde <span>Tobi</span></h1>
+                        <h2>Kehinde <span>Tobi</span></h2>
                         <h4 class="font">I am a Frontend Developer</h4>
                         <div class="buttons row">
                             <div><a class="btn" href="#">Contact me</a></div>
