--- a/Porfolio/index.html
+++ b/Porfolio/index.html
@@ -21,10 +21,10 @@
                 </div>
                 <div class="menu-list">
                   <ul>
-                    <li><a href="/index.html">About Me</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/signup.html">Register</a></li>
-                    <li><a href="/login.html">Log In</a></li>
+                    <li><a href="./index.html">About Me</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./signup.html">Register</a></li>
+                    <li><a href="./login.html">Log In</a></li>
                 </ul>
                 </div>
             </div>
